# MyFantasyTools

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  gen.bat  requirements.txt
.github/workflows/: build.yml
docs/: building.md  demo.avif  tutorial.md
source/: main.cpp  python_utilities.cpp
source/blender_plugin/: CMakeLists.txt  __init__.py  blender_manifest.toml  export_level.py
source/blender_plugin/core/: color.py  composite.py  data_models.py  navmesh.py  render_view.py  view.py
source/blender_plugin/export/: export_main.py  render.py  save.py  serialize.py
source/blender_plugin/ui/: ui_main.py
source/core/: CMakeLists.txt
source/core/flatbuffers/: level.fbs
source/core/libmft/: CMakeLists.txt  level.cpp  level.h  level_manager.cpp  level_manager.h  main.cpp  math.h  mf_level.cpp  mf_level.h  mf_math.h  mf_view_data.cpp  mf_view_data.h  mf_view_level_manager.h  mf_view_resources.cpp  mf_view_resources.h  view_data.cpp  view_data.h  view_level_manager.h
source/core/libpython/: CMakeLists.txt  python_utilities.cpp
source/core/tests/: CMakeLists.txt  test_io.cpp  test_jxl.cpp  test_math.cpp
source/core/utilities/: CMakeLists.txt  io.cpp  io.h  jxl.cpp  jxl.h
source/cpp/: CMakeLists.txt
source/cpp/libmft/: main.cpp
source/cpp/libpython/: CMakeLists.txt
source/cpp/utilities/: io.h
source/extblender/:  blender_manifest.toml  CMakeLists.txt  __init__.py  blender_manifest.toml  export_level.py  serialize_level.py
source/extblender/core/: composite.py  data_models.py  navmesh.py  view.py
source/extblender/export/: export_main.py  render.py  serialize.py
source/extblender/ui/: ui_main.py
source/extblender/utilities/: __init__.py  export.py  navmesh.py
source/flatbuffers/: CMakeLists.txt  level.fbs
source/godot_plugin/: CMakeLists.txt
source/godot_plugin/core/: CMakeLists.txt  assertion.h  gd_background.cpp  gd_background.h  gd_background_effect.cpp  gd_background_effect.h  gd_level.cpp  gd_level.h  gd_manager.cpp  gd_manager.h  gd_view_resources.cpp  gd_view_resources.h  gd_viewdata.cpp  gd_viewdata.h  mf_level.cpp  mf_level.h  mf_manager.cpp  mf_manager.h  mf_viewdata.cpp  mf_viewdata.h  register_types.cpp
source/godot_plugin/gdscript/: level_import.gd  plugin.cfg
source/godot_plugin/resources/: background.gdshader  background.glsl  background_composite.glsl  import_plugin.gd  level_import.gd  mf_panel.gd
source/godot_plugin/templates/: CMakeLists.txt  template.debug.gdextension.in  template.development.gdextension.in  template.packaged.gdextension.in  template.release.gdextension.in
source/python/: CMakeLists.txt  python_utilities.cpp
source/utilities/: CMakeLists.txt  io.cpp  io.h  jxl.cpp  jxl.h
tools/: export_level.py  process_level.py  serialize_level.py
tools/blendertools/: __init__.py  composite.py
tools/mfblender/: __init__.py  camera.py  composite.py  view.py
tools/mft_blender/: __init__.py  camera.py  composite.py  navmesh.py  save_data.py
